--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8" />
     <title>Spa Menu</title>
     <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+    <th:block th:replace="~{fragments :: fonts}"></th:block>
 </head>
 <body>
-<h1>My Super Fancy Spa</h1>
-<div id = "clientProfile">
-</div>
-<div id = "servicesMenu">
-</div>
+    <h1>My Super Fancy Spa</h1>
+        <div id = "clientProfile">
+            <h2>My Profile</h2>
+            <p>Name:<span th:text = "${name}"></span></p>
+            <p>Skin Type:<span th:text = "${skintype}"></span></p>
+            <p>Mani/Pedi<span th:text = "${manipedi}"></span></p>
+        </div>
+        <div id = "servicesMenu">
+            <h2>Menu of Available Services</h2>
+            <div>
+                <h3>Facial Treatments</h3>
+                <p>Our estheticians recommend the following for your skin type:</p>
+            </div>
+            <table>
+                <th:block th:each="value : ${appropriateFacials}">
+                    <tr>
+                        <td th:text="${value}"></td>
+                    </tr>
+                </th:block>
+            </table>
+            <div th:if="${manipedi.equals('manicure')} or ${manipedi.equals('both')}">
+                <h3>Manicure</h3>
+                <p th:replace="~{fragments :: manicureDescription}"></p>
+            </div>
+            <div th:if="${manipedi.equals('pedicure')} or ${manipedi.equals('both')}">
+                <h3>Pedicure</h3>
+                <p th:replace="~{fragments :: pedicureDescription}"></p>
+            </div>
+        </div>
+
+    <footer>
+        <div>Ask about our new colors for your mani/pedi!</div>
+        <div id="polish-collection">
+            <th:block th:each="option : ${polishChoices}">
+                <div class="polish-sample" th:style="'background: ' + ${option}"></div>
+            </th:block>
+        </div>
+    </footer>
+
 </body>
 </html>
