--- a/src/main/resources/templates/serviceSelection.html
+++ b/src/main/resources/templates/serviceSelection.html
@@ -6,6 +6,7 @@
     <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
 <body>
+<header th:replace="~{fragments :: header}"></header>
 <form method = 'post'>
 
     <label>
