modifying user class by persisting user object

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,9 +7,13 @@
 </head>
 <body>
     <header th:fragment="header">
-    <div id="mag">The Spa</div>
-        <p th:fragment = "manicureDescription">Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</p>
-        <p th:fragment = "pedicureDescription">Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</p>
+    <div id="mag">Indigo Spa</div>
+        <div class="nav">
+            <a class="navlink" href="/">Services</a>
+            <a class="navlink" href="/">Blog</a>
+            <a class="navlink" href="/">Book</a>
+            <a class="navlink" href="/">Contact</a>
+        </div>
     </header>
 </body>
 </html>
