--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,14 +1,26 @@
 body {
-    background-color: pink;
+    background-color: #F7F7F7;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-div {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    text-align: center;
-    background-color: white;
+header {
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-items: flex-end;
+    background-color: black;
+    color: white;
+    height: 60px;
+    padding: 10px 30px;
 }
+
+main {
+    padding: 30px 100px;
+}
+
+
 
 h1 {
     margin: auto;
