--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,9 @@
 <body>
     <header th:replace="~{fragments :: header}"></header>
     <main>
-
+        <h2 th:text="${headingText}"></h2>
+        <p>Don't know what kind of service you need? Take our <a href="/services">quiz</a> to find out!</p>
     </main>
+        <img th:src="@{/images/spaBanner.jpeg}" width="100%">
 </body>
 </html>
