--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -9,11 +9,31 @@
 
     <main>
         <form action="/user" method="POST">
-            <label>Username<input type='text' name='username' th:value="${username}" required /></label>
-            <label>Email<input type='email' name='email' th:value="${email}" required /></label>
-            <label>Password<input type='password' name='password' required /></label>
-            <label>Verify Password<input type='password' name='verify' required /></label>
-            <p class="error" th:if="${error}" th:text="${error}"></p>
+            <label>
+                Username:
+                <input th:field="${user.username}"  />
+                <p th:errors="${user.username}"></p>
+            </label>
+
+            <label>
+                Email:
+                <input name='email' th:field="${user.email}" />
+                <p th:errors="${user.email}"></p>
+            </label>
+
+            <label>
+                Password:
+                <input type='password' th:field="${user.password}" />
+                <p th:errors="${user.password}"></p>
+            </label>
+
+            <label>
+                Verify Password:
+                <input type='password' th:field="${user.verifyPassword}" />
+                <p th:errors="${user.verifyPassword}"></p>
+            </label>
+
+
             <button type='submit'>Sign Up</button>
         </form>
 
