implemented request filter to enable basic authentication

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,10 +9,11 @@
     <header th:fragment="header">
     <div id="mag">Indigo Spa</div>
         <div class="nav">
-            <a class="navlink" href="/">Services</a>
+            <a class="navlink" href="/serviceSelection">Services</a>
             <a class="navlink" href="/">Blog</a>
             <a class="navlink" href="/">Book</a>
             <a class="navlink" href="/">Contact</a>
+            <a class="navlink" href="/login">Login</a>
         </div>
     </header>
 </body>
